Full Home Skeleton
This is the fist finished skeleton for home, need javascript to build
the lists, shouldn’t be to hard.

--- a/Website/hack-illinois/public/css/home.css
+++ b/Website/hack-illinois/public/css/home.css
@@ -21,6 +21,7 @@
   border-top: none; }
 
 .mainContainer {
-  padding: 0; }
+  padding: 0;
+  margin-bottom: 40px; }
 
 /*# sourceMappingURL=home.css.map */
