restyle landing page, Last push before nap

--- a/Website/hack-illinois/public/css/landing.css
+++ b/Website/hack-illinois/public/css/landing.css
@@ -17,4 +17,7 @@
   background-color: #232F35;
   width: 100%; }
 
+.headerFooterTitle {
+  color: #81B8D7; }
+
 /*# sourceMappingURL=landing.css.map */
