--- a/Website/hack-illinois/resources/assets/sass/landing.scss
+++ b/Website/hack-illinois/resources/assets/sass/landing.scss
@@ -1,3 +1,7 @@
+$light: #81B8D7;
+$mid: #6791A9;
+$dark: #232F35;
+
 .landingContainer{
 	//background-color:#95ADE6;
 }
@@ -18,11 +22,15 @@
 	width:100%;
 	height:600px;
 	//position:relative;
-	background-color:#81B8D7;
+	background-color:$light;
 }
 
 .headerImageFooter{
     height:150px;
-    background-color:#232F35;
+    background-color:$dark;
     width:100%
+}
+
+.headerFooterTitle{
+	color:$light;
 }
