--- a/MobileApps/cobalt/www/css/index.css
+++ b/MobileApps/cobalt/www/css/index.css
@@ -1,57 +1,27 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
-#nav { 
-    padding-top: 30px; 
-    background-color: #6791A9;
-    color: white;
+body {
+    background-color: #7F9BDC;
 }
-
-div {
+h1 {
+    font-size: 100px;
     text-align: center;
     font-family: Raleway;
+    color: white;
+}
+p {
     font-size: 20px;
-}
-html, body {
-   margin:0;
-   padding:0;
-   height:100%;
-}
-#content{
-    margin-top:58px;
-}
-.sidebar {
-    position: fixed; 
-    display: inline-block; 
-    margin-top:58px;
-    top: 0px; 
-    height: 100%; 
-    width: 200px; 
-    left: -200px; 
-    background-color: #232F35; 
-    transition: all 0.5s ease-in-out;
-}
-.menu {
-    color: white;
-    text-align: left;
-    font-family: Raleway;
-    border-style: solid;
-    border-bottom: thin solid white;
-    border-top: black;
-    border-right: black;
-    border-left: black;
-}
-.menuhead {
-    color: white;
     text-align: center;
-    font-size: 30px;
     font-family: Raleway;
-    border-style: solid;
-    border-bottom: thin solid white;
-    border-top: black;
-    border-right: black;
-    border-left: black;
-
+    color: white;
+    padding-top: 30px;
 }
-.menulist {
-    padding: 0;
-    list-style-type: none;
+.logo {
+    width:250px;
+    height:250px;
+    padding-top:30px;
+    margin:0 auto;
+}
+.logoimg {
+    width:250px;
+    height:250px;
 }
