--- a/Website/hack-illinois/resources/assets/sass/landing.scss
+++ b/Website/hack-illinois/resources/assets/sass/landing.scss
@@ -2,6 +2,10 @@ $light: #81B8D7;
 $mid: #6791A9;
 $dark: #232F35;
 
+.navbar{
+	margin:0px;
+}
+
 .landingContainer{
 	//background-color:#95ADE6;
 }
