--- a/Website/hack-illinois/resources/assets/sass/addChore.scss
+++ b/Website/hack-illinois/resources/assets/sass/addChore.scss
@@ -16,14 +16,24 @@ body, html{
 	height:100%;
 }
 
+.innerContainer{
+	width:500px;
+}
+
 .well{
 	margin-top:20px;
 }
 
 .interval{
 	border: thin solid $dark;
-	width:300px;
+	width:100%
+	max-width:300px;
 	margin:30px auto;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	flex-flow:column;
+	padding:5px;
 }
 
 .checkbox{
