Added content to about page (mobile)

--- a/MobileApps/cobalt/www/css/about.css
+++ b/MobileApps/cobalt/www/css/about.css
@@ -58,3 +58,9 @@ html, body {
 .menu:hover {
     background-color: #6791A9;
 }
+ul {
+    padding-top: 58px;
+    text-align: left;
+    font-family: Raleway;
+    font-size: 10px;
+}
