css on about ul

--- a/MobileApps/cobalt/www/css/about.css
+++ b/MobileApps/cobalt/www/css/about.css
@@ -58,9 +58,12 @@ html, body {
 .menu:hover {
     background-color: #6791A9;
 }
-ul {
+#info {
+    list-style-type:square;
     padding-top: 58px;
     text-align: left;
     font-family: Raleway;
-    font-size: 10px;
+    font-size: 15px;
+    margin-left: -5px;
+    margin-bottom: 0;
 }
