--- a/MobileApps/cobalt/www/css/index.css
+++ b/MobileApps/cobalt/www/css/index.css
@@ -39,7 +39,7 @@ p {
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .form input {
-  font-family: "Roboto", sans-serif;
+  font-family: "Raleway", sans-serif;
   outline: 0;
   background: #f2f2f2;
   width: 100%;
@@ -50,7 +50,7 @@ p {
   font-size: 14px;
 }
 .form button {
-  font-family: "Roboto", sans-serif;
+  font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   outline: 0;
   background: #6791a9;
@@ -62,6 +62,14 @@ p {
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
+}
+.panel {
+    margin-bottom: 20px;
+    background-color: #fff;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    border: 0px solid transparent;
+    border-radius: 0px;
 }
 .form button:hover,.form button:active,.form button:focus {
   background: #81b8d7;
@@ -117,7 +125,7 @@ body {
   background: -moz-linear-gradient(right, #a9dbf8, #a9dbf8);
   background: -o-linear-gradient(right, #a9dbf8, #a9dbf8);
   background: linear-gradient(to left, #a9dbf8, #a9dbf8);
-  font-family: "Roboto", sans-serif;
+  font-family: "Raleway", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
 }
