--- a/MobileApps/cobalt/www/css/home.scss
+++ b/MobileApps/cobalt/www/css/home.scss
@@ -18,3 +18,11 @@ body .mainContainer{
 .lead{
 	font-size:30px;
 }
+
+.choreComplete{
+	margin-right:20px;
+}
+
+.roomates .progress{
+	height:10px;
+}
