--- a/Website/hack-illinois/public/css/home.css
+++ b/Website/hack-illinois/public/css/home.css
@@ -24,7 +24,7 @@
   padding: 0;
   margin-bottom: 40px; }
 
-.addChoreButton {
+.addChoreButton, .deleteChoreButton {
   margin-bottom: 20px; }
 
 /*# sourceMappingURL=home.css.map */
